<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">B2B</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Loading">Loading&#8230;&#8230;&#8230;</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <string-array name="signUpAsArray">
        <item>Customer</item>
        <item>Retailer</item>
        <item>Supplier</item>
    </string-array>

    <string name="title_activity_registeration">RegisterationActivity</string>
    <string name="title_activity_customer_area">CustomerArea</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_admin_area">Admin_area</string>
    <string name="general_complaint_fragment">General Complaint</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general_complaint">General Complaint</string>
    <string name="respond">Respond</string>
    <string name="submit">Submit</string>
    <string name="addcategory">Parent Category</string>
    <string name="categoryhint">Category</string>
    <string name="AddParentCategory">Add super category</string>
    <string name="complaintAbout">Complaint About</string>
    <string name="complainFrom">Complaint From</string>
    <string name="itemComplaint">Complaints about Items</string>
    <string name="shopComplaint">Complaint about shop</string>
    <string name="generalNotification">General Notification</string>
    <string name="urgentNotification">Urgent Notification</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="markAll">Mark all</string>
    <string name="advertisementPricing">Advertisement Pricing</string>
    <string name="desc">Description</string>
    <string name="days">No of days</string>
    <string name="cost">Cost</string>
    <string name="size">Size of advertisement</string>
    <string name="type">Type</string>
    <string name="fine">Fine</string>
    <string name="pickCategory">Pick a Category</string>

    <string-array name="typeArray">
        <item>Retailer</item>
        <item>Supplier</item>
    </string-array>

    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="view_advertisement">View Advertisements</string>
    <string name="noofcategories">No of Categories</string>
    <string name="shoppricing">Shop Pricing</string>
    <string name="view_fine_pricing">View Fine Pricing</string>
    <string name="shop_pricing">Shop Pricing</string>
    <string name="subCategory">Add Sub Category</string>
    <string name="addshop">Add Shop</string>
    <string name="title_activity_pay_fine">Pay Fine</string>
    <string name="finetitle">Your account has been suspended by the admin. Pay fine to continue using this applciation.</string>
    <string name="fineabc">Your payment has been received. Your account will now be restored. Please wait few minutes</string>
    <string name="title_activity_retailer_area">Retailer_area</string>
    <string name="title_activity_first_time_login">FirstTimeLogin</string>
    <string name="EditMyCategories">Edit My Categories</string>
    <string name="addnewitem">Add New Item</string>
    <string name="itemname">Item Name</string>
    <string name="longdescription">Long Description</string>
    <string name="qtyperunit">Qty Per unit</string>
    <string name="unit_of_measurement">Unit of Measurement</string>
    <string name="shopName">Shop Name</string>
    <string name="description">Description</string>
    <string name="categoriesAllowed">No of categories allowed</string>
    <string name="itemsSelling">No of Items Selling</string>
    <string name="itemsAvailable">No of Items not Selling</string>
    <string name="expirydate">Expiry Date</string>
    <string name="paymentEmail">Payment Email</string>
    <string name="selectcategory">Select a Category</string>
    <string name="clicktochange">Click On Image To Change It</string>
    <string name="cp">C.P.</string>
    <string name="sp">S.P.</string>
    <string name="minorder">Min order</string>
    <string name="discount">Discount</string>
    <string name="qtyonorder">Qty. On Order</string>
    <string name="qtyonhand">Qty. On Hand</string>
    <string name="qty">Qty.</string>
    <string name="viewdetails">View Details</string>
    <string name="note">Long Click on Image to view expanded image</string>
    <string name="chngImg">Change Image</string>
    <string name="addWarehouse">Add Warehouse</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="itemavailabilty">Item Availabilty</string>
    <string name="batchDiscounts">Batch Discounts</string>
    <string name="clicktoupdate">Click to Update</string>
    <string name="add">Add</string>
    <string name="place_order">Place Order</string>
    <string name="Method">Method</string>
    <string name="warehouse">Warehouse</string>
    <string-array name="ordervia">
        <item >Email</item>
        <item >Phone</item>
    </string-array>
        <string name="total">Total</string>
        <string name="zero">0</string>
        <string name="totalitems">Total No of Items</string>
        <string name="date">Date</string>
        <string name="placed_by">Placed To</string>
        <string name="placed_to">Placed To</string>
        <string name="shipment_address">Shipment Address</string>
        <string name="vieworderlist">View Orders List</string>
        <string name="order_details">Order Details</string>
        <string name="update_status">Update Status</string>
        <string name="categories">Categories</string>
        <string name="plan_details">Plan Details</string>
        <string name="choose_background">Choose background</string>
        <string name="buy_advertisement">Buy Advertisement</string>
        <string name="choose_text_color">Choose text Color</string>
        <string name="view_warehouses">View Warehouse</string>
        <string name="shippingPrice">Shipping Price</string>
        <string name="subscribe_items">Subscribe items</string>
        <string name="file_complaint">File A Complaint</string>
        <string name="complain">Complain</string>
        <string name="visitshop">Visit Shop</string>
        <string name="subscribe">Subscribe</string>
        <string name="batch_discount">Batch discounts</string>
        <string name="click_to_check">Click To check</string>
        <string name="mysupplier">My Supplier</string>
        <string name="add_to_cart">Add To cart</string>
        <string name="add_to_wishlist">Add to Wishlist</string>
        <string name="mywishlist">My wishlist</string>
        <string name="shoppingcart">SHopping Cart</string>
        <string name="checkout">Checkout</string>

</resources>