<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewShopPricingDetails" >
 <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
     >

    <TextView
        style="@style/titlebarstyle"
        android:text="@string/shoppricing" />

   <EditText
        android:id="@+id/desc"
        style="@style/EditTextStyle"
        android:hint="@string/desc" />
<EditText
        android:id="@+id/days"
        style="@style/EditTextStyle"
        android:hint="@string/days" 
        android:inputType="number"
        />
<EditText
        android:id="@+id/category"
       	style="@style/EditTextStyle"
        android:hint="@string/noofcategories" 
        android:inputType="number" />
<EditText
        android:id="@+id/cost"
        style="@style/EditTextStyle"
        android:hint="@string/cost" />
  <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/update" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

        </LinearLayout>
</LinearLayout>
</ScrollView>